--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,9 @@ section {
 
 .userlist {
   display: flex;
+  flex-wrap: wrap;
+  margin: 3rem 0 0 0;
+  justify-content: space-around;
 }
 
 .usercard {
@@ -57,13 +60,12 @@ section {
 
 .userinfo {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   border: 1px solid black;
-  padding: 1rem;
   border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
-  justify-content: space-around;
   align-items: center;
-  flex: 1 1 33%;
+  flex: 0 0 33%;
 }
 
 .username {
@@ -83,4 +85,16 @@ section {
 
 label {
   display: inline-block;
+}
+
+@media (max-width: 767px) {
+  .userlist {
+    flex-direction: column;
+  }
+  #nav {
+    flex-direction: column;
+  }
+  header {
+    flex-direction: column;
+  }
 }
