--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,19 @@ label {
   display: inline-block;
 }
 
+.cancel {
+  background-color: #ddd;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+
 @media (max-width: 767px) {
   .userlist {
     flex-direction: column;
